update static files